# PROJECT-CONTROL

./: .gitignore  6 zakladnych prikazov  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ERROR_HANDLING_IMPLEMENTATION.md  IDENTITY.md  MANIFEST.in  MANUAL.md  MEMORY.md  NAVRH.md  NON_DEVELOPER_UX.md  PUBLISHING.md  README.md  SOUL.md  UX_IMPLEMENTATION_STATUS.md  UX_IMPROVEMENTS.md  demo_tree_output.txt  filetree.txt  navrhovane vystupy.md  orientačny graf.md  pc.py  prepare_release.py  pyproject.toml  remove_all_replace_markers.py  remove_replace_markers.py  ČO ROBI ČO.md
.github/workflows/: ci.yml  publish.yml
.project-control/: config.json  patterns.yaml  snapshot.json
.project-control/embeddings/: embeddings_cache.json
.project-control/exports/: CLI_CAPABILITY_MATRIX.md  checklist.md  find_argparse.md  find_pc.md  ghost_candidates.md  import_graph_orphans.md  writers_report.md
AUDITY/: ARCHITECTURE MAP.md  Audit #1.md  DEEP_DIVE_AUDIT_V3.md  FRESH_AUDIT_PHASE1.md  FUNCTIONAL_ARCHITECTURE_AUDIT.md  KOMPLETNY_AUDIT_V2.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md  deep dive audit - phase2 reference.md  filetree.txt  final_audit_v1.md  navrh na refactor.md  refactor_plan_#1.md
AUDITY/navhry na zlepšenie/: 1. seria napadov na zlepšenie.md  final_analyzer_design.md  maly refactor.md
analysis/: duplicate_detector.py  import_graph_detector.py  orphan_detector.py  semantic_detector.py  session_detector.py
core/: ghost.py  ghost_service.py  markdown_renderer.py  scanner.py  snapshot_service.py  writers.py
docs/: MATURITY_REPORT_v1.md
documentation/: 6 zakladnych prikazov  Audit_report.md  NAVRH.md  navod.md  navrhovane vystupy.md  navrhy modulov.txt  štruktura projektu.md
plans/: pre_release_checklist.md
project_control/: __init__.py  pc.py  ui.py
project_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
project_control/analysis/: dead_analyzer.py  duplicate_detector.py  entrypoint_policy.py  graph_exporter.py  graph_metrics.py  import_graph_detector.py  import_graph_engine.py  layer_boundary_validator.py  legacy_detector.py  orphan_detector.py  patterns_analyzer.py  python_import_graph_engine.py  search_analyzer.py  self_architecture_validator.py  semantic_detector.py  session_detector.py  unused_analyzer.py
project_control/cli/: graph_cmd.py  menu.py  router.py
project_control/config/: __init__.py  graph_config.py  patterns_loader.py  presets.py
project_control/core/: backup.py  content_store.py  embedding_service.py  error_handler.py  exit_codes.py  ghost.py  ghost_service.py  import_parser.py  markdown_renderer.py  pre_flight.py  scanner.py  snapshot_service.py  snapshot_validator.py  validator.py
tests/: test_dead_analyzer.py  test_duplicate_detector.py  test_extractors_trace.py  test_file_explorer.py  test_ghost_graph_core.py  test_integration.py  test_menu_builder.py  test_orphan_detector.py  test_presets.py  test_service_layer.py  test_state_manager.py  test_tables.py  test_tree_formatter.py  test_unused_analyzer.py
(+52 files in other folders)
