[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-control"
version = "0.1.0"
description = "Deterministic architectural analysis engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name" }
]

dependencies = [
    # Core dependencies
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Embedding system for semantic analysis (requires Ollama server)
embedding = [
    "ollama>=0.1.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]

[project.scripts]
pc = "project_control.pc:main"

[tool.setuptools.packages.find]
where = ["."]