[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-control"
version = "0.1.0"  # Keep in sync with project_control/__init__.py
description = "Deterministic architectural analysis engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Daniel Hlaváč" }
]
keywords = ["architecture", "analysis", "code-quality", "static-analysis", "graph", "import-graph", "dead-code", "refactoring", "code-visualization", "dependency-analysis", "ghost-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/danielhlavac/project-control"
Repository = "https://github.com/danielhlavac/project-control"
Issues = "https://github.com/danielhlavac/project-control/issues"

dependencies = [
    # Core dependencies
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Embedding system for semantic analysis (requires Ollama server)
embedding = [
    "ollama>=0.1.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]

[project.scripts]
pc = "project_control.pc:main"

[tool.setuptools.packages.find]
where = ["."]